bk_ida/gccida/c1/ftruncify
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ftruncify/src/optabs.c:4815:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ftruncify/src/optabs.c:4816:23: error: use of undeclared identifier 'machine_mode'
return expand_unop( ( machine_mode)*( ( unsigned __int8 *)x + 2), optab_table[17], x, v1, 0); 
                      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ftruncify/src/obj/optabs.o] Error 1
